<resources>
    <string name="app_name">ClamberAdmin</string>
    <string name="login_activity_text">Clamber App Admin - Login Below</string>
    <string name="submit">Submit</string>
    <string name="enter_username">enter username</string>
    <string name="user_does_not_exist">User Does Not Exist</string>

    <string name="wall_section_s">Wall Section #: %s</string>
    <string name="last_updated_s">Last Updated: %s</string>
    <string name="view_climbs">View Climbs</string>
    <string name="remove_all">Remove All</string>
    <string name="add_climb">Add Climb</string>
    <string name="remove">Remove?</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="grade">Grade</string>
    <string name="no_internet_connection">No internet connection</string>

    <string-array name="tape_color">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>White</item>
        <item>Black</item>
        <item>Grey</item>
    </string-array>

    <string-array name="climb_type">
        <item>chimney</item>
        <item>crimp</item>
        <item>edge</item>
        <item>jug</item>
        <item>pinch</item>
        <item>pocket</item>
        <item>sidepull</item>
        <item>sloper</item>
        <item>standard</item>
        <item>traverse</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gym_rating">Gym Rating</string>

</resources>
