<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rage.clamberadmin.ClimbUpdateFragment">

    <LinearLayout
        android:id="@+id/climb_update_fragment_title_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/climb_update_fragment_wall_section_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/wall_section_s"
            />

        <TextView
            android:id="@+id/climb_update_fragment_last_updated_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/last_updated_s"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/climb_update_fragment_button_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/climb_update_fragment_title_linear_layout"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/climb_update_fragment_view_climbs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_climbs"
            />
        <Button
            android:id="@+id/climb_update_fragment_remove_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_all"
            />
        <Button
            android:id="@+id/climb_update_fragment_add_climb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_climb"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/climb_update_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/climb_update_fragment_button_row"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        >
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
