<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/login_activity_text"
    android:textSize="20sp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/login_activity_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:layout_weight="3"
            android:maxLength="15"
            />
        <Button
            android:id="@+id/login_activity_submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            />

    </LinearLayout>


</RelativeLayout>
